tests/error/undefined_name.ca

f = {
    add(a b c)
}.block

int = make_interpreter()
int.push_frame(f [])
int.run
assert(int.errored)
